--- a/src/app/app-shell/app-shell.component.scss
+++ b/src/app/app-shell/app-shell.component.scss
@@ -21,7 +21,7 @@
 
   &:hover {
     .focus-overlay {
-      background-color: rgba(var(--palette-secondary-main-rgb), .05);
+      background-color: rgba(var(--palette-secondary-main-rgb), 0.05);
     }
   }
 }
@@ -80,8 +80,10 @@
     left: auto;
     right: 0;
     z-index: 1100;
-    box-shadow: rgb(0 0 0 / 20%) 0 2px 4px -1px, rgb(0 0 0 / 14%) 0 4px 5px 0,
-    rgb(0 0 0 / 12%) 0 1px 10px 0;
+    box-shadow:
+      rgb(0 0 0 / 20%) 0 2px 4px -1px,
+      rgb(0 0 0 / 14%) 0 4px 5px 0,
+      rgb(0 0 0 / 12%) 0 1px 10px 0;
     background-color: var(--palette-background-paper);
     height: 64px;
   }
