--- a/src/app/ui/token/_typography.scss
+++ b/src/app/ui/token/_typography.scss
@@ -1,4 +1,4 @@
-@use "variables/fontSize";
+@use 'variables/fontSize';
 
 html {
   font-size: 62.5%;
@@ -95,7 +95,6 @@ section {
     color: var(--palette-text-primary);
   }
 }
-
 
 @media only screen and (max-width: 900px) {
   .title {
