refactor: migrate to new control flow syntax using the schematic

--- a/src/app/app-shell/app-shell.component.html
+++ b/src/app/app-shell/app-shell.component.html
@@ -147,7 +147,10 @@
       (click)="toggleSideDrawer()"
     ></ui-hamburger-button>
     <div class="ui-toolbar--widget-container">
-      <ui-search-bar (ngModelChange)="searchValue.set($event)" [ngModel]="searchValue()"></ui-search-bar>
+      <ui-search-bar
+        (ngModelChange)="searchValue.set($event)"
+        [ngModel]="searchValue()"
+      ></ui-search-bar>
       <ui-dark-mode-toggle></ui-dark-mode-toggle>
       <button
         type="button"
